Remove Set.of